<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingVertical="40dp"
    tools:context=".QuizResultActivity"
    android:background="@color/dark_grey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/ic_trophy"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hey_congratulations"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginVertical="20dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="username"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/userScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Your score is"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            />
    </LinearLayout>

</LinearLayout>